--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,18 @@
 /* Font-imports */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Waterfall&display=swap');
+/* reset to 10px - now i can use 1rem = 10px */
+html {
+    font-size: 62.5%; 
+}
 /* Default settings */
 * {
     padding: 0;
     margin: 0;
+    border: none;
     box-sizing: border-box;
+}
+body {
+    font-size: 1.6rem;
+    font-family: 'Playfair Display', sans-serif;
+    min-height: 100vh;
 }
