add style to font awesome icons and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,5 +35,13 @@ main {
 /* End of main styles */
 
 /* Start of footer styles */
-
+.footer {
+    text-align: center;
+}
+.footer-icon {
+    text-decoration: none;
+    font-size: 200%;
+    color: darkslategrey;
+    margin: 10%;
+}
 /* End of footer styles */
