--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,14 @@ body {
 .logo {
     text-decoration: none;
     color: black;
+    font-size: 2rem;
+    text-align: center;
 }
+/*
 .nav {
-
+                    !!!Might not need this, then remove
 }
+*/
 .nav-list {
     list-style: none;
 }
@@ -64,5 +68,16 @@ main {
 
 /* Media for medium to large screens */
 @media screen and (min-width: 750px){
-    
+    .header {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 2rem;
+        align-items: center;
+    }
+    .nav-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: end;
+        gap: 2rem;
+    }
 }
