--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,17 @@ body {
 /* Start of header styles */
 .header {
     width: 100%;
-    height: 10vh;
+    min-height: 10vh;
+    max-height: 16vh;
 }
 .logo {
     text-decoration: none;
     color: black;
     font-size: 2rem;
     text-align: center;
+}
+.active {
+    border-bottom: 0.1rem solid black;
 }
 /*
 .nav {
@@ -48,15 +52,15 @@ main {
     background: url(../images/logan-weaver-unsplash.jpg) no-repeat center center;
     background-size: cover;
     width: 100%;
-    min-height: 80vh;
+    min-height: 75vh;
     position: relative;
 }
-.main-page {
+.main-nav-font {
     font-size: 3rem;
     color: grey;
-}
-.about-me {
-
+    position: absolute;
+    bottom: 3rem;
+    right: 3rem;
 }
 .main-link {
     text-decoration: none;
@@ -68,7 +72,7 @@ main {
 /* Start of footer styles */
 .footer {
     text-align: center;
-    height: 10vh;
+    max-height: 10vh;
 }
 .footer-icon {
     text-decoration: none;
