--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ main {
     text-decoration: none;
     font-size: 3rem;
     color: inherit;
+    margin-left: 1rem;
 }
 /* End of main styles */
 
