--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,14 @@ body {
     width: 100%;
     min-height: 80vh;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-container {
+    width: 80%;
+    height: 70vh;
+    background-color: rgba(243, 243, 243, 0.8);
 }
 /* End of main styles for about page */
 
