--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,8 @@ body {
     width: 80%;
     height: 70vh;
     background-color: rgba(243, 243, 243, 0.8);
+    text-align: center;
+    padding: 3rem;
 }
 /* End of main styles for about page */
 
