--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 html {
     font-size: 62.5%;
 }
-
 /* Default settings */
 * {
     padding: 0;
@@ -13,27 +12,23 @@ html {
     border: none;
     box-sizing: border-box;
 }
-
 body {
     font-size: 1.6rem;
     font-family: 'Playfair Display', sans-serif;
     min-height: 100vh;
 }
-
 /* Start of header styles */
 .header {
     width: 100%;
     min-height: 10vh;
     max-height: 16vh;
 }
-
 .logo {
     text-decoration: none;
     color: black;
     font-size: 2rem;
     text-align: center;
 }
-
 .active {
     border-bottom: 0.1rem solid black;
 }
@@ -46,14 +41,12 @@ body {
 .nav-list {
     list-style: none;
 }
-
 .nav-list-link {
     color: black;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 2rem;
 }
-
 /* End of header styles */
 
 /* Start of main styles for first page */
@@ -64,7 +57,6 @@ body {
     min-height: 80vh;
     position: relative;
 }
-
 .main-nav-font {
     font-size: 3rem;
     color: grey;
@@ -94,10 +86,13 @@ body {
 }
 .about-container {
     width: 80%;
-    height: 70vh;
+    height: auto;
     background-color: rgba(243, 243, 243, 0.8);
     text-align: center;
     padding: 3rem;
+}
+.about-header {
+    margin: 2rem 0;
 }
 /* End of main styles for about page */
 
