add gallery.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,8 +96,9 @@ body {
     margin: 1rem 0;
 }
 .about-text {
-    margin-bottom: 1rem;
+    margin: 1.5rem 0;
 }
+                /* Change style of this! Other colors... */
 .gallery-link {
     font-size: 110%;
     font-weight: bold;
