--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,13 +69,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
-
 .im-matilda {
     font-size: 6rem;
 }
-
 .to-about-box {
     border: 1px solid black;
     border: 1px solid black;
@@ -83,7 +80,10 @@ main {
     width: 25rem;
     margin: 0 auto;
 }
-
+.to-about-box:hover {
+    color: white;
+    background-color: #2c2c2c;
+}
 .main-link {
     text-decoration: none;
     font-size: 3rem;
