--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ body {
 */
 .nav-list {
     list-style: none;
+    text-align: center;
 }
 
 .nav-list-link {
@@ -69,6 +70,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10rem;
 }
 .im-matilda {
     font-size: 6rem;
@@ -181,6 +183,12 @@ main {
 }
 
 /* End of footer styles */
+/* Media for small screens - controls the nav */
+@media screen and (max-width: 750px) {
+    main {
+      margin-top: 6rem;
+    }
+  }
 
 /* Media for medium to large screens */
 @media screen and (min-width: 750px) {
