add style to img on about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,10 @@ main {
 .about-text {
     margin: 1.5rem 0;
 }
-
+.matilda-picture {
+    width: 100%;
+    max-height: 50rem;
+}
 /* Change style of this! Other colors... */
 .gallery-link {
     font-size: 110%;
