--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,7 @@ main {
 .matilda-picture {
     width: 100%;
     max-height: 50rem;
+    border-radius: 0.5rem;
 }
 /* Change style of this! Other colors... */
 .gallery-link {
