--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ main {
     background-color: rgba(243, 243, 243, 0.8);
     text-align: center;
     padding: 3rem;
+    margin: 2rem 0;
 }
 
 .about-header {
@@ -133,6 +134,7 @@ main {
 }
 .matilda-picture {
     width: 100%;
+    max-width: 45rem;
     max-height: 50rem;
     border-radius: 0.5rem;
 }
@@ -194,7 +196,7 @@ main {
 
 /* End of footer styles */
 /* Media for small screens */
-@media screen and (min-width: 340px) {
+@media screen and (min-width: 348px) {
     .logo {
         font-size: 4rem;
     }
@@ -226,6 +228,9 @@ main {
 
     .im-matilda {
         margin-top: 25%;
+    }
+    .about-container {
+        font-size: larger;
     }
 
     .gallery-page {
