--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ main {
 .footer {
     text-align: center;
     max-height: 10vh;
+    padding: 2rem;
 }
 
 .footer-icon {
@@ -257,7 +258,8 @@ main {
         grid-template-areas: 'about img'
         'about img'
         'styles img'
-        'styles order';
+        'styles order'
+        'styles .';
         gap: 2rem;
     }
     .about-me {grid-area: about;}
