--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ main {
 }
 
 .about-container {
-    width: 80%;
+    width: 85%;
     height: auto;
     background-color: rgba(243, 243, 243, 0.8);
     text-align: center;
@@ -125,7 +125,7 @@ main {
     margin: 2rem 0;
 }
 .about-container > div {
-    padding: 2rem;
+    padding: 1.5rem;
 }
 .about-header {
     margin: 1rem 0;
@@ -139,6 +139,7 @@ main {
     max-width: 45rem;
     max-height: 50rem;
     border-radius: 0.5rem;
+
 }
 /* Change style of this! Other colors... */
 .gallery-link {
@@ -235,7 +236,9 @@ main {
     .about-container {
         font-size: larger;
     }
-
+    .about-container > div {
+        padding: 1rem 6rem;
+    }
     .gallery-page {
         flex-direction: row;
     }
@@ -269,5 +272,9 @@ main {
     
     .matilda-picture {
         max-height: 65rem;
+    }
+    .custom-order {
+        width: 80%;
+        margin: 0 auto;
     }
 }
