--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,6 @@ main {
 
 .to-about-box {
     border: 1px solid black;
-    border: 1px solid black;
     text-align: center;
     width: 25rem;
     margin: 0 auto;
@@ -131,6 +130,7 @@ main {
     margin: 1rem 0;
     font-size: 3rem;
 }
+
 .about-text {
     margin: 1.5rem 0;
 }
@@ -147,12 +147,13 @@ main {
     font-weight: bold;
     text-decoration: none;
     color: inherit;
-    background-color: #DCB4A8;
     padding: 0.5rem 0.7rem;
+    border: 1px solid #2c2c2c;
 }
 
 .gallery-link:hover {
-    background-color: #B27C66;
+    color: white;
+    background-color: #2c2c2c;
 }
 
 /* End of main styles for about page */
@@ -188,7 +189,7 @@ main {
 .footer {
     text-align: center;
     max-height: 10vh;
-    padding: 2rem;
+    margin-bottom: 1rem;
 }
 
 .footer-icon {
