--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ main {
     padding: 0.5rem 0.7rem;
     border: 1px solid #2c2c2c;
     border-radius: 0.3rem;
+    margin: 1rem;
 }
 
 .gallery-link:hover {
