--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ main {
 
 /* Start of main styles for first page */
 .first-page {
-    background: url(../images/logan-weaver-unsplash.jpg) no-repeat center center;
+    background: url(../images/backgrounds/background-main_2000-013.webp) no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
