--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,13 +165,13 @@ main {
 }
 
 .illustration-category {
-    background: url(../images/chanelliten.png) no-repeat center center;
+    background: url(../images/illustrations/Par_800x600-004.webp) no-repeat center center;
     background-size: cover;
     width: 100%;
 }
 
 .acrylics-category {
-    background: url(../images/rosakvinnaochleo.jpg) no-repeat center center;
+    background: url(../images/acrylics/acryllinje3lila.webp) no-repeat center center;
     background-size: cover;
     width: 100%;
 }
@@ -183,12 +183,12 @@ main {
 /* End of styles for main gallery page */
 
 /* Start of styles for illustration & acrylics page */
-.illustrations {
+.gallery-images {
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
 }
-.illustrations > img {
+.gallery-images > img {
     width: 85%;
 }
 /* Start of footer styles */
@@ -254,7 +254,7 @@ justify-content: center;
         width: 30rem;
         height: 30rem;
     }
-    .illustrations > img {
+    .gallery-images > img {
         width: 47%;
     }
 }
@@ -287,7 +287,7 @@ justify-content: center;
         width: 80%;
         margin: 0 auto;
     }
-    .illustrations > img {
+    .gallery-images > img {
         width: 24%;
     }
 }
