--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,15 +26,18 @@ body {
     min-height: 10vh;
     max-height: 16vh;
 }
+
 .logo {
     text-decoration: none;
     color: black;
     font-size: 2rem;
     text-align: center;
 }
+
 .active {
     border-bottom: 0.1rem solid black;
 }
+
 .nav-list {
     list-style: none;
     text-align: center;
@@ -115,9 +118,11 @@ main {
     padding: 1.5rem;
     margin: 2rem 0;
 }
-.about-container > div {
+
+.about-container>div {
     padding: 1.5rem;
 }
+
 .about-header {
     margin: 1rem 0;
     font-size: 3rem;
@@ -126,9 +131,11 @@ main {
 .about-text {
     margin: 1.5rem 0;
 }
+
 .painter-image {
     display: none;
 }
+
 .matilda-picture {
     width: 100%;
     max-width: 45rem;
@@ -136,6 +143,7 @@ main {
     border-radius: 0.5rem;
 
 }
+
 /* Change style of this! Other colors... */
 .gallery-link {
     font-size: 110%;
@@ -180,31 +188,40 @@ main {
     width: 22rem;
     height: 22rem;
 }
+
 /* End of styles for main gallery page */
 
 /* Start of styles for illustration & acrylics page */
 .gallery-images {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
 }
-.gallery-images > img {
+
+.gallery-images>img {
     width: 85%;
 }
+
 .back {
-margin: 2rem 0;
-text-align: center;
+    margin: 2rem 0;
+    text-align: center;
 }
+
 /* End of styles for illustration and acrylics pages */
 
 /* Start of styles for contact page */
-input, textarea, select {
+input,
+textarea,
+select {
     border: 1px solid grey;
     border-radius: 0.4rem;
 }
+
 label {
     font-size: 2rem;
 }
+
 .contact-page {
     background: url(../images/backgrounds/background-paintbrush.webp) no-repeat center center;
     background-size: cover;
@@ -213,6 +230,7 @@ label {
     align-items: center;
     flex-direction: column;
 }
+
 .contact-form {
     width: 90%;
     max-width: 60rem;
@@ -221,36 +239,45 @@ label {
     padding: 3rem;
     border-radius: 0.5rem;
 }
-.contact-text{
+
+.contact-text {
     text-align: center;
     padding: 1rem 2rem;
 }
-.contact-element{
+
+.contact-element {
     margin: 1rem;
 }
+
 .form-input {
     padding: 0.8rem;
     width: 100%;
 }
-.form-select{
+
+.form-select {
     padding: 0.3rem;
     width: 100%;
 }
+
 .textarea {
     min-height: 20rem;
     width: 100%;
 }
+
 .submit-button {
     padding: 0.6rem;
     text-transform: capitalize;
     text-align: center;
 }
+
 .submit-center {
     text-align: center;
 }
+
 .reviced-form {
     text-align: center;
 }
+
 /* End of styles for contact page */
 
 /* Start of footer styles */
@@ -302,12 +329,15 @@ label {
     .im-matilda {
         margin-top: 25%;
     }
+
     .about-container {
         font-size: larger;
     }
-    .about-container > div {
+
+    .about-container>div {
         padding: 1rem 6rem;
     }
+
     .gallery-page {
         flex-direction: row;
     }
@@ -316,7 +346,8 @@ label {
         width: 30rem;
         height: 30rem;
     }
-    .gallery-images > img {
+
+    .gallery-images>img {
         width: 47%;
     }
 }
@@ -327,32 +358,48 @@ label {
         width: 40rem;
         height: 40rem;
     }
+
     .painter-image {
         display: block;
     }
+
     /* Grid layout setup for about page on large screens */
     .about-container {
         display: grid;
         grid-template-areas: 'about img'
-        'about img'
-        'styles img'
-        'styles order'
-        'styles .';
+            'about img'
+            'styles img'
+            'styles order'
+            'styles .';
         gap: 2rem;
     }
-    .about-me {grid-area: about;}
-    .painter-image {grid-area: img;}
-    .paint-styles {grid-area: styles;}
-    .custom-order {grid-area: order;}
+
+    .about-me {
+        grid-area: about;
+    }
+
+    .painter-image {
+        grid-area: img;
+    }
+
+    .paint-styles {
+        grid-area: styles;
+    }
+
+    .custom-order {
+        grid-area: order;
+    }
 
     .custom-order {
         width: 80%;
         margin: 0 auto;
     }
-    .about-container > div {
+
+    .about-container>div {
         padding: 1rem 3rem;
     }
-    .gallery-images > img {
+
+    .gallery-images>img {
         width: 24%;
     }
 }
