add margin to contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,8 +238,8 @@ label {
     max-width: 60rem;
     height: auto;
     background-color: rgba(243, 243, 243, 0.8);
-
     padding: 3rem;
+    margin: 2rem 1rem;
     border-radius: 0.5rem;
 }
 
