change layout on about page for screens larger than 1200 px and remove double instagram link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,8 +373,8 @@ label {
         grid-template-areas: 
             'about img'
             'styles img'
-            'styles insta'
-            'order order';
+            'styles order'
+            'insta insta';
         gap: 1rem;
     }
     .about-me {
