--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,9 @@ body {
     text-decoration: none;
     font-size: 2rem;
 }
-
+.nav-list-link:hover {
+    border-bottom: 1px solid;
+}
 .nav-list-item {
     margin: 0.7rem;
 }
@@ -159,7 +161,6 @@ main {
     color: white;
     background-color: #2c2c2c;
 }
-
 /* End of main styles for about page */
 
 /* Start of styles for main gallery page */
