--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,8 +117,9 @@ main {
     height: auto;
     background-color: rgba(243, 243, 243, 0.8);
     text-align: center;
-    padding: 1.5rem;
+    padding: 2rem 4rem;
     margin: 2rem 0;
+    line-height: 2.7rem;
 }
 
 .about-container>div {
@@ -131,7 +132,7 @@ main {
 }
 
 .about-text {
-    margin: 2rem 0;
+    margin: 3rem;
 }
 
 .painter-image {
@@ -154,7 +155,6 @@ main {
     padding: 0.5rem 0.7rem;
     border: 1px solid #2c2c2c;
     border-radius: 0.3rem;
-    margin: 1rem;
 }
 
 .gallery-link:hover {
@@ -184,14 +184,16 @@ main {
     background-size: cover;
     width: 100%;
 }
-.gallery-link {
-    transition: transform .2s;
-}
+
 .gallery-categories {
     width: 22rem;
     height: 22rem;
 }
-.gallery-link:hover {
+.gallery-page-link {
+    margin: 1rem;
+    transition: transform .2s;
+}
+.gallery-page-link:hover {
     transform: scale(1.1);
 }
 
@@ -339,10 +341,6 @@ label {
 
     .about-container {
         font-size: larger;
-    }
-
-    .about-container>div {
-        padding: 3rem;
     }
 
     .gallery-page {
