--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,11 @@ body {
     font-size: 2rem;
     text-align: center;
     font-family: 'Permanent Marker', sans-serif;
-    
+
 }
+
 .logo:hover {
-color: #2c2c2c;
+    color: #2c2c2c;
 }
 
 .active {
@@ -55,10 +56,12 @@ color: #2c2c2c;
     text-decoration: none;
     font-size: 2rem;
 }
+
 .nav-list-link:hover {
     border-bottom: 1px solid #D17B88;
     color: #D17B88;
 }
+
 .nav-list-item {
     margin: 0.7rem;
 }
@@ -85,7 +88,7 @@ main {
 }
 
 .im-matilda {
-    font-size: 6rem;
+    font-size: 4rem;
     margin-top: 50%;
     text-align: center;
     font-family: 'Permanent Marker', sans-serif;
@@ -93,8 +96,11 @@ main {
 
 .to-about-box {
     border: 1px solid #2c2c2c;
-    width: 25rem;
+    width: fit-content;
     margin: 0 auto;
+    margin-top: 1rem;
+    border-radius: 0.2rem;
+    padding: 0.5rem;
 
 }
 
@@ -106,10 +112,10 @@ main {
 
 .main-link {
     text-decoration: none;
-    font-size: 3rem;
+    font-size: 2rem;
     color: inherit;
-    margin-left: 1rem;
     font-weight: bold;
+    margin: 0 auto;
 }
 
 /* End of main styles for first page */
@@ -134,9 +140,11 @@ main {
 .about-container>div {
     padding: 1rem 0;
 }
+
 .hey-you {
     font-size: larger;
 }
+
 .about-header {
     color: #D17B88;
     margin: 1rem 0;
@@ -175,10 +183,11 @@ main {
     border: none;
     background-color: #D17B88;
 }
+
 /* End of main styles for about page */
 
 /* Start of styles for main gallery page */
-.gallery-page {    
+.gallery-page {
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -203,10 +212,12 @@ main {
     width: 22rem;
     height: 22rem;
 }
+
 .gallery-page-link {
     margin: 1rem;
     transition: transform .2s;
 }
+
 .gallery-page-link:hover {
     transform: scale(1.1);
 }
@@ -214,15 +225,18 @@ main {
 /* End of styles for main gallery page */
 
 /* Start of styles for illustration & acrylics page */
-.illustration-page, .acrylic-page {
+.illustration-page,
+.acrylic-page {
     background: none;
 }
+
 .gallery-images {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
 }
+
 .gallery-images>img {
     width: 85%;
 }
@@ -241,15 +255,18 @@ select {
     border: 1px solid #1f1f1f;
     border-radius: 0.4rem;
 }
+
 label {
     font-size: 2rem;
 }
+
 .contact-page {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+
 .contact-form {
     width: 90%;
     max-width: 60rem;
@@ -268,21 +285,26 @@ label {
 .contact-element {
     margin: 1rem;
 }
+
 .form-hover:hover {
-    border:1px solid #D17B88;
+    border: 1px solid #D17B88;
 }
+
 .form-input {
     padding: 0.8rem;
     width: 100%;
 }
+
 .form-select {
     padding: 0.3rem;
     width: 100%;
 }
+
 .textarea {
     min-height: 20rem;
     width: 100%;
 }
+
 .submit-center {
     text-align: center;
 }
@@ -315,113 +337,137 @@ label {
     main {
         margin-top: 9rem;
     }
+
     .logo {
         font-size: 3.5rem;
     }
-}
-@media screen and (min-width: 475px) {
-    main {
-        margin-top: 10rem;
-    }
-    .logo {
-        font-size: 4.5rem;
-    }
-}
-
-/* Media for medium to large screens */
-@media screen and (min-width: 750px) {
-    main {
-        margin-top: 1rem;
-    }
-
-    .header {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 1rem;
-        align-items: center;
-    }
-
-    .nav-list {
-        display: flex;
-        flex-direction: row;
-        justify-content: end;
-        gap: 2rem;
-    }
-
-    .nav-list-item {
-        margin: 0;
-    }
 
     .im-matilda {
-        margin-top: 25%;
+        font-size: 6rem;
     }
 
-    .about-container {
-        font-size: larger;
-    }
-    .hey-you {
-        font-size: 300%;
-    }
-    .gallery-page {
-        flex-direction: row;
+    .main-link {
+        text-decoration: none;
+        font-size: 3rem;
     }
 
-    .gallery-categories {
-        width: 30rem;
-        height: 30rem;
-    }
+    @media screen and (min-width: 475px) {
+        main {
+            margin-top: 10rem;
+        }
 
-    .gallery-images>img {
-        width: 47%;
-    }
-}
+        .logo {
+            font-size: 4.5rem;
+        }
 
-/* Responsive for large to extra large screens */
-@media screen and (min-width: 1200px) {
-    .header {
-        padding: 0 2rem;
-    }
-    .gallery-categories {
-        width: 40rem;
-        height: 40rem;
-  
-    }
+        .im-matilda {
+            margin-top: 35%;
+        }
 
-    .painter-image {
-        display: block;
-    }
+        /* Media for medium to large screens */
+        @media screen and (min-width: 750px) {
+            main {
+                margin-top: 1rem;
+            }
 
-    /* Grid layout setup for about page on large screens */
-    .about-container {
-        width: 80%;
-        display: grid;
-        grid-template-areas: 
-            'about img'
-            'styles img'
-            'styles order'
-            'insta insta';
-        gap: 1rem;
-    }
-    .about-me {
-        grid-area: about;
-    }
-    .painter-image {
-        grid-area: img;
-    }
-    .paint-styles {
-        grid-area: styles;
-    }
-    .custom-order {
-        grid-area: order;
-    }
-    .latest-works {
-    grid-area: insta;
-    }
-    .custom-order {
-        width: 80%;
-        margin: 0 auto;
-    }
-    .gallery-images>img {
-        width: 24%;
-    }
-}
+            .header {
+                display: flex;
+                justify-content: space-between;
+                padding: 0 1rem;
+                align-items: center;
+            }
+
+            .nav-list {
+                display: flex;
+                flex-direction: row;
+                justify-content: end;
+                gap: 2rem;
+            }
+
+            .nav-list-item {
+                margin: 0;
+            }
+
+            .im-matilda {
+                margin-top: 25%;
+            }
+
+            .about-container {
+                font-size: larger;
+            }
+
+            .hey-you {
+                font-size: 300%;
+            }
+
+            .gallery-page {
+                flex-direction: row;
+            }
+
+            .gallery-categories {
+                width: 30rem;
+                height: 30rem;
+            }
+
+            .gallery-images>img {
+                width: 47%;
+            }
+        }
+
+        /* Responsive for large to extra large screens */
+        @media screen and (min-width: 1200px) {
+            .header {
+                padding: 0 2rem;
+            }
+
+            .gallery-categories {
+                width: 40rem;
+                height: 40rem;
+
+            }
+
+            .painter-image {
+                display: block;
+            }
+
+            /* Grid layout setup for about page on large screens */
+            .about-container {
+                width: 80%;
+                display: grid;
+                grid-template-areas:
+                    'about img'
+                    'styles img'
+                    'styles order'
+                    'insta insta';
+                gap: 1rem;
+            }
+
+            .about-me {
+                grid-area: about;
+            }
+
+            .painter-image {
+                grid-area: img;
+            }
+
+            .paint-styles {
+                grid-area: styles;
+            }
+
+            .custom-order {
+                grid-area: order;
+            }
+
+            .latest-works {
+                grid-area: insta;
+            }
+
+            .custom-order {
+                width: 80%;
+                margin: 0 auto;
+            }
+
+            .gallery-images>img {
+                width: 24%;
+            }
+        }
